# omni-scanner

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_FLOW.md  CHANGELOG.md  COMMIT_MSG.txt  CONTRIBUTING.md  DOCUMENTATION_UPDATE_SUMMARY.md  EVENT_REGISTRY.yaml  KANBAN.md  LIBRARIAN_INTEGRATION_STRATEGY.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES_v0.6.0.md  ROADMAP.md  SERENA_TOOLS_INTEGRATION_PLAN.md  SURFACE_COVERAGE_IMPROVEMENT_PLAN.md  _cross_ref.py  analyze_census.py  cli.py  infrastructure_docs_census.json  launch_sandbox.py  pyproject.toml  pyproject.toml.template  requirements.federation.locked.txt  requirements.federation.txt  server.json  show_health.py  test_mcp_discovery.py  test_mcp_discovery_compact.py  test_mcp_discovery_v2.py
.github/: copilot-instructions.md
.github/workflows/: publish-mcp.yml
.omni/: scanner_registry_guide.md
.serena/: project.yml
core/: fetcher.py  gate.py  model.py  provenance.py  registry.py  registry_v2.py  requirements.py
core/scanners/: __init__.py  contracts.py  docs.py  surfaces.py  tools.py  uuids.py
docs/: BEGINNERS_GUIDE.md
mcp_server/: DYNAMIC_DISCOVERY_ARCHITECTURE.md  README.md  __init__.py  config.py  omni_dev_watcher.py  omni_mcp_server.py  requirements.txt  test_mcp_server.py
omni/: cli.py
omni/builders/: __init__.py  canonical_uuid_builder.py  commit_history_builder.py  executors_builder.py  (+3 more)
scripts/: README.md  apply_patch_to_cmp.py  build_all_commit_histories.py  compare_uuid_registries.py  reconcile_project_identity.py
tests/: README.md  TEST_REGISTRY.yaml  verify_event_logging.py
(+160 files in other folders)
